[gd_scene load_steps=9 format=3 uid="uid://bw4hmvlakep7x"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_3hfe8"]
[ext_resource type="FontFile" uid="uid://dcjf0fn1da6h" path="res://Fonts/Silkscreen-Regular.ttf" id="2_42uth"]
[ext_resource type="Texture2D" uid="uid://dnxrh5xd873pl" path="res://Images/title.svg" id="2_cwhfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3547a"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o128w"]
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0
bg_color = Color(0.694118, 0.6, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs1x3"]
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0
bg_color = Color(0.760784, 0.027451, 0.105882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2w6f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsam2"]
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0
bg_color = Color(0.709804, 0.160784, 0.345098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3hfe8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3547a")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
texture = ExtResource("2_cwhfp")
expand_mode = 5
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_42uth")
theme_override_styles/normal = SubResource("StyleBoxFlat_o128w")
text = "Instructions"

[node name="Start" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_42uth")
theme_override_styles/normal = SubResource("StyleBoxFlat_cs1x3")
text = "Start"

[node name="Instructions" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m2w6f")

[node name="MarginContainer" type="MarginContainer" parent="Instructions"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Instructions/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_42uth")
theme_override_font_sizes/font_size = 20
text = "How to play:"

[node name="ScrollContainer" type="ScrollContainer" parent="Instructions/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Instructions/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_42uth")
text = "In the game Bug, you and your opponent will try to build a complete bug. To do this, you will take turns rolling a dice. Each number represents a different part of the bug.

1 = Abdomen
2 = Antennae
3 = Head
4 = Legs
5 = Thorax
6 = Wings

Some parts require others before you can add them - example: you can't have antennae without a head first!

The first player to complete their bug will win."

[node name="Button" type="Button" parent="Instructions/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_42uth")
theme_override_styles/normal = SubResource("StyleBoxFlat_bsam2")
text = "Close"

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Instructions/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
